k8s/50-deployment-user-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-db
spec:
  selector:
    matchLabels:
      app: user-service-db
  template:
    metadata:
      labels:
        app: user-service-db
    spec:
      containers:
        - name: user-service-db
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: user-service-db-volume
      volumes:
        - name: user-service-db-volume
          hostPath:
            path: /user-service-db-volume
            type: DirectoryOrCreate
