k8s/60-deployment-challenge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenge-service
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: challenge-service
  template:
    metadata:
      labels:
        app: challenge-service
    spec:
      containers:
        - name: challenge-service
          image: chess_challenge:latest
          imagePullPolicy: Never
