k8s/60-deployment-dispatcher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatcher-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dispatcher-service
  template:
    metadata:
      labels:
        app: dispatcher-service
    spec:
      containers:
        - name: dispatcher-service
          image: chess_dispatcher:latest
          imagePullPolicy: Never
