k8s/60-deployment-forecaster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecaster
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: forecaster
  template:
    metadata:
      labels:
        app: forecaster
    spec:
      containers:
        - name: forecaster
          image: chess_forecaster
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
