k8s/60-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
spec:
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
        - name: frontend-service
          image: chess_frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          volumeMounts:
            - name: frontend-nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: frontend-nginx-config
          configMap:
            name: frontend-nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
