k8s/60-deployment-game.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-service
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: game-service
  template:
    metadata:
      labels:
        app: game-service
    spec:
      containers:
        - name: game-service
          image: chess_game:latest
          imagePullPolicy: Never
