k8s/60-deployment-loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      containers:
        - name: loadgenerator
          image: chess_loadgenerator
          imagePullPolicy: Never
