k8s/60-deployment-websocket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-service
  template:
    metadata:
      labels:
        app: websocket-service
    spec:
      containers:
        - name: websocket-service
          image: chess_wsnode:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
            - containerPort: 2112
          livenessProbe:
            httpGet:
              port: 8081
              path: /ping
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8081
              path: /ping
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 5
