k8s/20-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 80
  selector:
    app: frontend-service
