k8s/20-service-game-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service-db
spec:
  ports:
    - port: 27017
  selector:
    app:  game-service-db
