k8s/20-service-websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
spec:
  ports:
  - port: 8081
  selector:
    app: websocket-service
