k8s/30-service-engine.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-service
spec:
  ports:
  - port: 9080
  selector:
    app: engine-service
