k8s/30-service-websocket.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  labels:
    app: websocket-service
spec:
  ports:
  - name: public 
    port: 8081
  - name: metrics
    port: 2112
  selector:
    app: websocket-service
